layout bugs fixes

--- a/src/assets/scss/components/_appbar.scss
+++ b/src/assets/scss/components/_appbar.scss
@@ -6,7 +6,6 @@
   column-gap: 4px;
   background-color: white;
   overflow: hidden;
-  padding: 3px 0;
   &-left,
   &-middle,
   &-right {
