--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -1,7 +1,6 @@
 .Navbar {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-  background-color: hsla(0, 0%, 100%, 0.9);
-  backdrop-filter: blur(16px);
+  background-color: white;
   overflow: hidden;
 }
