--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -4,5 +4,4 @@
   grid-row: 2;
   gap: 1rem;
   padding: 1rem;
-  padding-bottom: 78px;
 }
